--- a/layout/_partial/after_footer.pug
+++ b/layout/_partial/after_footer.pug
@@ -53,3 +53,4 @@ if page.mathjax2
 
 script(type='text/javascript', src=url_for(theme.js) + '/codeblock-resizer.js' + '?v=' + theme.version)
 script(type='text/javascript', src=url_for(theme.js) + '/smartresize.js' + '?v=' + theme.version)
+script(type='text/javascript', src=url_for(theme.js) + '/toc4org.js' + '?v=' + theme.version)
