添加bing站点的验证

--- a/layout/_partial/head.pug
+++ b/layout/_partial/head.pug
@@ -4,6 +4,7 @@ head
     meta(content='yes', name='apple-mobile-web-app-capable')
     meta(content='black-translucent', name='apple-mobile-web-app-status-bar-style')
     meta(content='telephone=no', name='format-detection')
+    meta(name='msvalidate.01',content='882A4E15FB483D0DD65BAC2CD6F114BD')
     meta(name='description', content=config.description)
     block title
     link(rel='stylesheet', type='text/css', href=url_for(theme.css) + '/style.css' + '?v=' + theme.version)
