为org mode添加toc样式

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1726,3 +1726,10 @@ em.search-keyword {
         margin: 8px 0;
     }
 }
+
+#text-table-of-contents {
+  a {
+    font-size: 14px;
+    color: #6E7173;
+  }
+}
